examples/invalid/invalid_unicode_char.jasn
// Invalid unicode escape - non-hex character
{
  bad: "\u00GZ"
}
